// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Attempting to bann a bot or team member Does not ban admins 1`] = `
{
  "content": "You do not have the permission to ban this user",
}
`;

exports[`Attempting to bann a bot or team member Does not ban bots 1`] = `
{
  "content": "You do not have the permission to ban this user",
}
`;

exports[`Attempting to bann a bot or team member Does not ban core 1`] = `""`;

exports[`Attempting to bann a bot or team member Does not ban maintainers 1`] = `
{
  "content": "You do not have the permission to ban this user",
}
`;

exports[`Attempting to bann a bot or team member Does not ban moderators 1`] = `
{
  "content": "You do not have the permission to ban this user",
}
`;

exports[`Banning spammer that has left the server Reacts with the correct emoji to automod message 1`] = `"❌"`;

exports[`Banning spammer that has left the server Sends back correct interaction reply to calling moderator 1`] = `
{
  "content": "Couldn't bann <@123>. User is not on the server.",
}
`;

exports[`Banning spammer who has DM set to private Discord ban api is called with the correct reason 1`] = `
{
  "reason": "Account is compromised",
}
`;

exports[`Banning spammer who has DM set to private Reacts with the correct emoji 1`] = `"✅"`;

exports[`Banning spammer who has DM set to private Sends back correct interaction reply to calling moderator 1`] = `
{
  "content": "Banned <@123> for spam but wasn't able to contact the user.",
}
`;

exports[`Banning spammer who has DM set to private Sends log to the correct channel 1`] = `
{
  "embeds": [
    {
      "author": {
        "icon_url": "image.jpg",
        "name": "Ban | bad.spammer",
      },
      "color": 15747399,
      "fields": [
        {
          "inline": true,
          "name": "User",
          "value": "<@123>",
        },
        {
          "inline": true,
          "name": "Moderator",
          "value": "<@007>",
        },
        {
          "inline": true,
          "name": "Reason",
          "value": "Account is compromised and spamming phishing links.",
        },
      ],
      "footer": {
        "text": "ID: 222",
      },
      "timestamp": "2024-06-12T10:56:17.844Z",
    },
  ],
}
`;

exports[`Banning spammer with DM enabled Discord ban api is called with the correct reason 1`] = `
{
  "reason": "Account is compromised",
}
`;

exports[`Banning spammer with DM enabled Discord message api is called with the correct message 1`] = `
{
  "embeds": [
    {
      "description": "Account is compromised and is used to spam phishing links.

  If you would still like to continue using our server, make sure to change your password and recover your account.
  After that send a detailed contact information to appeal the ban on theodinprojectcontact@gmail.com",
      "title": "Banned: Compromised account / Spam",
    },
  ],
}
`;

exports[`Banning spammer with DM enabled Reacts with the correct emoji 1`] = `"✅"`;

exports[`Banning spammer with DM enabled Sends back correct interaction reply to calling moderator 1`] = `
{
  "content": "Banned <@123> for spam successfully.",
}
`;

exports[`Banning spammer with DM enabled Sends log to the correct channel 1`] = `
{
  "embeds": [
    {
      "author": {
        "icon_url": "image.jpg",
        "name": "Ban | bad.spammer",
      },
      "color": 15747399,
      "fields": [
        {
          "inline": true,
          "name": "User",
          "value": "<@123>",
        },
        {
          "inline": true,
          "name": "Moderator",
          "value": "<@007>",
        },
        {
          "inline": true,
          "name": "Reason",
          "value": "Account is compromised and spamming phishing links.",
        },
      ],
      "footer": {
        "text": "ID: 222",
      },
      "timestamp": "2024-06-12T10:56:17.836Z",
    },
  ],
}
`;
